namespace Geometry
{
    public class Square : Rectangle
    {
        public Square(double a) : base(a, a) 
        { 
            // System.Console.WriteLine("Square");
        }
    }
}