namespace Geometry
{
public interface IAreaWriter
{
    void Write(GeometryFigure obj);
}
}