namespace Geometry
{
    public interface ITypeWriter
    {
        void Write(GeometryFigure obj);
    }
}